--- a/style.css
+++ b/style.css
@@ -1,31 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300');
-*{
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
+* {
     padding: 0px;
     margin: 0px;
     font-family: 'Lato', sans-serif;
-    color:  rgb(196, 93, 93);
-    
+    color: rgb(196, 93, 93);
+
 }
 
 body {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-content: center;
     align-items: center;
     background-color: lemonchiffon;
-    
+
 
 }
+
 div {
 
     display: flex;
+    margin: 1rem;
     flex-direction: column;
     align-items: center;
-    border: solid 1px  rgb(196, 93, 93);
+    border: solid 1px rgb(196, 93, 93);
     width: 30%;
-    
+
 }
 
 
@@ -46,7 +50,7 @@ li {
 
 li:nth-child(even) {
     border-bottom: solid 1px rgb(196, 93, 93);
-    padding-bottom: 1rem;   
+    padding-bottom: 1rem;
 
 }
 
@@ -66,13 +70,46 @@ a {
     margin: 0.2rem;
     font-size: 1.2rem;
     text-decoration: none;
-    border: solid 1px  rgb(196, 93, 93);
+    border: solid 1px rgb(196, 93, 93);
 }
 
 a:hover {
     background-color: rgb(196, 93, 93);
     color: lightskyblue;
 }
+
+.innerDiv {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    width: 80%;
+    padding: 1rem;
+    border: none;
+    border-bottom: solid 1px rgb(196, 93, 93);
+    margin-bottom: 1rem;
+
+}
+
+.innerDiv:last-child {
+    border-bottom: none;
+}
+
+img {
+    max-width: 90%;
+    padding-bottom: 1rem;
+}
+
+code {
+    padding: 1rem;
+    margin: 2rem;
+    background-color: grey;
+    color: white;
+    font-family: 'Share Tech Mono', monospace;
+}
+
+
+
+
+
 
 @media (max-width: 1400px) {
 
@@ -81,6 +118,7 @@ a:hover {
     }
 
 }
+
 @media (max-width: 700px) {
 
     div {
