--- a/style.css
+++ b/style.css
@@ -17,18 +17,8 @@ body {
     align-content: center;
     align-items: center;
     background-color: lemonchiffon;
+    
 
-
-}
-
-div {
-
-    display: flex;
-    margin: 1rem;
-    flex-direction: column;
-    align-items: center;
-    border: solid 1px rgb(196, 93, 93);
-    width: 30%;
 
 }
 
@@ -36,6 +26,24 @@ div {
 ul {
     padding: 2rem;
 }
+
+.asignaturas {
+    padding: 0.5rem;
+    margin: 0.5rem;
+    border: solid 1px rgb(196, 93, 93);
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+}
+
+.asignaturas > p {
+    text-align: center;
+    align-self: center;
+}
+
+
 
 li {
     list-style: none;
@@ -58,10 +66,23 @@ li:last-child {
     border-bottom: 0px;
 }
 
+.listaEj2 {
+    border: 0px;
+    padding: 0px;
+    border-bottom: 0pc;
+    text-align: left;
+
+    
+}
+.listaEj2:nth-child(even) {
+    border: 0px;
+    padding-bottom: 0px;
+}
 
 h1 {
     font-family: 'Amatic SC', cursive;
     font-size: 5rem;
+    text-align: center;
 }
 
 a {
@@ -78,7 +99,22 @@ a:hover {
     color: lightskyblue;
 }
 
+.main {
+
+    display: flex;
+    margin: 1rem;
+    flex-direction: column;
+    align-items: center;
+    border: solid 1px rgb(196, 93, 93);
+    width: 40%;
+   
+
+}
+
 .innerDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding-top: 1rem;
     padding-bottom: 1rem;
     width: 80%;
@@ -89,31 +125,54 @@ a:hover {
 
 }
 
+
+
+pre {
+    font-family: monospace;
+    padding: 0px;
+    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    font-family: 'Share Tech Mono', monospace;
+    
+}
+
+.goback{
+    background-image: url('goback-button.png');
+    background-position: 4% 50%;
+    background-size: 2rem;
+    background-repeat: no-repeat;
+    background-blend-mode: soft-light;
+    padding: 1rem;
+    padding-left: 3rem;
+
+    
+
+}
+
 .innerDiv:last-child {
     border-bottom: none;
 }
 
 img {
-    max-width: 90%;
+    max-width: 80%;
     padding-bottom: 1rem;
 }
 
-code {
-    padding: 1rem;
-    margin: 2rem;
-    background-color: grey;
-    color: white;
+/*.inner06 {
+    padding: 0px;
+    margin: 0px;
+    display: block;
+    background-color: orange;
     font-family: 'Share Tech Mono', monospace;
-}
-
-
-
-
+}*/
 
 
 @media (max-width: 1400px) {
 
-    div {
+    .main {
         width: 50%;
     }
 
@@ -121,7 +180,7 @@ code {
 
 @media (max-width: 700px) {
 
-    div {
+    .main {
         width: 95%;
     }
 
